--- a/package.json
+++ b/package.json
@@ -150,10 +150,10 @@
     "qrcode.react": "^0.8.0",
     "raw-loader": "^2.0.0",
     "rc-progress": "^2.0.6",
-    "react": "^16.8.2",
+    "react": "^0.0.0-experimental-f6b8d31a7",
     "react-confetti": "^4.0.1",
-    "react-dom": "^16.8.2",
-    "react-draggable": "^3.3.0",
+    "react-dom": "^0.0.0-experimental-f6b8d31a7",
+    "react-draggable": "^4.0.0",
     "react-ga": "^2.5.7",
     "react-hot-loader": "^4.11.1",
     "react-modal": "^3.1.7",
