--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -828,6 +828,11 @@
   "To enable this feature, check 'Save Password' the next time you start the app.": "To enable this feature, check 'Save Password' the next time you start the app.",
   "An email address is required to sync your account.": "An email address is required to sync your account.",
   "Sign Out": "Sign Out",
+  "Portuguese": "Portuguese",
   "Follow more tags": "Follow more tags",
-  "Portuguese": "Portuguese"
+  "Embedded": "Embedded",
+  "Text copied": "Text copied",
+  "Sync your balance and preferences across devices.": "Sync your balance and preferences across devices.",
+  "Use this address to receive LBC.": "Use this address to receive LBC.",
+  "Paid content cannot be embedded": "Paid content cannot be embedded"
 }
