--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -826,22 +826,16 @@
   "Discussion": "Discussion",
   "If you don't choose a file, the file from your existing claim %name% will be used": "If you don't choose a file, the file from your existing claim %name% will be used",
   "To enable this feature, check 'Save Password' the next time you start the app.": "To enable this feature, check 'Save Password' the next time you start the app.",
+  "for adding a subscription!": "for adding a subscription!",
+  "Claiming...": "Claiming...",
+  "for viewing content today!": "for viewing content today!",
+  "for your first publish!": "for your first publish!",
+  "for having many downloads!": "for having many downloads!",
   "An email address is required to sync your account.": "An email address is required to sync your account.",
-  "Sign Out": "Sign Out",
-  "Follow more tags": "Follow more tags",
+  "Pause at any time to select a thumbnail from your video": "Pause at any time to select a thumbnail from your video",
   "Portuguese": "Portuguese",
-  "Sign In to LBRY": "Sign In to LBRY",
-  "Check Your Email": "Check Your Email",
-  "sign in": "sign in",
-  "An email was sent to %email%. Follow the link to %verify_text%. This will update automatically.": "An email was sent to %email%. Follow the link to %verify_text%. This will update automatically.",
-  "Resend Email": "Resend Email",
-  "Sync your balance and preferences across devices.": "Sync your balance and preferences across devices.",
-  "Add Email": "Add Email",
-  "New email sent.": "New email sent.",
-  "Enter Your Wallet Password": "Enter Your Wallet Password",
-  "You set your wallet password when you previously installed LBRY. This may have been on different device.": "You set your wallet password when you previously installed LBRY. This may have been on different device.",
-  "Password for %email%": "Password for %email%",
-  "help guide": "help guide",
-  "If you are having issues, checkout our %help% or email us at %email%.": "If you are having issues, checkout our %help% or email us at %email%.",
-  "Wrong password for %email%": "Wrong password for %email%"
+  "Your YouTube Channels": "Your YouTube Channels",
+  "Sign In To Unlock Rewards": "Sign In To Unlock Rewards",
+  "This is optional. You can continue to use this app without rewards, but LBC may be needed for some tasks.": "This is optional. You can continue to use this app without rewards, but LBC may be needed for some tasks.",
+  "Unlock Rewards": "Unlock Rewards"
 }
