--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -830,5 +830,9 @@
   "To enable this feature, check 'Save Password' the next time you start the app.": "To enable this feature, check 'Save Password' the next time you start the app.",
   "An email address is required to sync your account.": "An email address is required to sync your account.",
   "Sign Out": "Sign Out",
-  "Follow more tags": "Follow more tags"
+  "Follow more tags": "Follow more tags",
+  "Launch on login": "Launch on login",
+  "Autolaunch on login": "Autolaunch on login",
+  "LBRY auto-launch on login enabled.": "LBRY auto-launch on login enabled.",
+  "LBRY auto-launch on login disabled.": "LBRY auto-launch on login disabled."
 }
